<resources>
    <string name="app_name">PMDM_Practica3</string>
    <string name="altaBtn">Alta</string>
    <string name="wi1Btn">PMDM_Practica3</string>
    <string name="wi2Btn">PMDM_Practica3</string>
    <string name="wi3Btn">PMDM_Practica3</string>
    <string name="wi4Btn">PMDM_Practica3</string>
    <string name="verBtn">Ver</string>
    <string name="salirBtn">Salir</string>
    <string name="aceptarBtn">Aceptar</string>
    <string name="cancelarBtn">Cancelar</string>
    <string name="emailLabel">Email:</string>
    <string name="nombreLabel">Nombre</string>
    <string name="fecnacLabel">Fecha de nacimiento:</string>
    <string name="volverBtn">Volver</string>
    <string name="estudiante">¿Eres estudiante?</string>
    <string name="conf">Si</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="otroGenero">Otro</string>
    <string name="eligeGenero">Elige tu género</string>
    <string name="pmdm">PMDM</string>
    <string name="programacion">Programacion</string>
    <string name="lectura">Literatura</string>
    <string name="vg">Videojuegos</string>
    <string name="musica">Musica</string>
    <string name="interes">¿Cuáles son tus intereses?</string>
    <string name="cine">Cine</string>
</resources>